--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginBottom="3dp">
+        >
 
         <Button
             android:id="@+id/btn1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
-            android:onClick="btnClick" />
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
+            android:onClick="btnClick"
+            />
 
         <Button
             android:id="@+id/btn2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
 
         <Button
             android:id="@+id/btn3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
     </TableRow>
 
@@ -42,59 +43,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginBottom="3dp">
+        >
 
         <Button
             android:id="@+id/btn4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
 
         <Button
             android:id="@+id/btn5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
 
         <Button
             android:id="@+id/btn6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_marginBottom="3dp">
+        android:gravity="center">
 
         <Button
             android:id="@+id/btn7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
 
         <Button
             android:id="@+id/btn8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:layout_marginRight="3pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
 
         <Button
             android:id="@+id/btn9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@color/grey"
+            android:layout_width="40pt"
+            android:layout_height="40pt"
+            android:backgroundTint="@color/gray"
             android:onClick="btnClick" />
     </TableRow>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingTop="40dp">
+
+        <Button
+            android:id="@+id/btn_play_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="playAgain"
+            android:text="@string/play_again" />
+    </LinearLayout>
 </TableLayout>
