--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,113 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:gravity="center">
-
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        >
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick"
-            />
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-
-        <Button
-            android:id="@+id/btn3"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        >
-
-        <Button
-            android:id="@+id/btn4"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-
-        <Button
-            android:id="@+id/btn5"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-
-        <Button
-            android:id="@+id/btn6"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn7"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-
-        <Button
-            android:id="@+id/btn8"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:layout_marginRight="3pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-
-        <Button
-            android:id="@+id/btn9"
-            android:layout_width="40pt"
-            android:layout_height="40pt"
-            android:backgroundTint="@color/gray"
-            android:onClick="btnClick" />
-    </TableRow>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingTop="40dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2.5"
+        android:layout_marginTop="30pt">
 
-        <Button
-            android:id="@+id/btn_play_again"
+        <TextView
+            android:id="@+id/tv_score_x"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="playAgain"
-            android:text="@string/play_again" />
+            android:textSize="50sp"
+            android:gravity="start"
+            android:layout_weight="1"
+            android:paddingStart="30pt"/>
+        <TextView
+            android:id="@+id/tv_colon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textColor="@color/black"
+            android:textSize="50sp"
+            android:gravity="center"
+            android:layout_weight="0.5"
+            />
+
+        <TextView
+            android:id="@+id/tv_score_o"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"
+            android:gravity="end"
+            android:layout_weight="1"
+            android:paddingEnd="30pt"/>
+
     </LinearLayout>
-</TableLayout>
+
+
+
+    <TableLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".MainActivity"
+        android:layout_marginTop="30pt">
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            >
+
+            <Button
+                android:id="@+id/btn1"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick"
+                />
+
+            <Button
+                android:id="@+id/btn2"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+
+            <Button
+                android:id="@+id/btn3"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            >
+
+            <Button
+                android:id="@+id/btn4"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+
+            <Button
+                android:id="@+id/btn5"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+
+            <Button
+                android:id="@+id/btn6"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btn7"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+
+            <Button
+                android:id="@+id/btn8"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginRight="3pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+
+            <Button
+                android:id="@+id/btn9"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:backgroundTint="@color/gray"
+                android:onClick="btnClick" />
+        </TableRow>
+
+    </TableLayout>
+
+    <Button
+        android:id="@+id/btn_play_again"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="playAgain"
+        android:text="@string/play_again"
+        android:layout_marginTop="10pt"
+        />
+
+</LinearLayout>
+
+
